--- a/1-exercise-solutions/lesson-04/4j.html
+++ b/1-exercise-solutions/lesson-04/4j.html
@@ -23,7 +23,7 @@
 
     <button class="buy-now-button" onclick="
       alert('Loading...');
-      alert('Purchased');
+      console.log('Purchased');
     ">Buy now</button>
   </body>
 </html>
